# maschine.rs

./: .gitignore  Cargo.toml  README
alsa-seq/: Cargo.toml  LICENSE
alsa-seq/src/: event.rs  handle.rs  lib.rs  port.rs  test.rs
doc/: osc_api.md
src/: main.rs
src/base/: maschine.rs  maschine_pad.rs  mod.rs
src/devices/: mod.rs
src/devices/mk2/: mikro.rs  mod.rs
