[package]
name = "maschine"
version = "0.0.1"
authors = ["William Light <wrl@illest.net>"]

[profile.release]
lto = true

[dependencies]
nix = "0.6.0"
glm = "*"
glm_color = "*"
midi = "*"
tinyosc = "0.0.3"

[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dependencies.alsa-seq]
path = "alsa-seq"
